# Gimi

./: .env.example  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  DEPLOY.md  PRD.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.mrrobot/: e2e.sh  verify.sh
docs/: base-mcp-plugin.md  base-mcp-production.md  owner-listing-mvp-spec.md
docs/partner-diligence/: agent-flow.md  architecture.md  deal-scope.md  demo-script.md  deployment.md  production-readiness.md  security-boundaries.md
e2e/: gimi.spec.ts
programs/rental_session/: Cargo.toml
programs/rental_session/src/: lib.rs
public/: gimi.html
public/idl/: rental_session.json
scripts/: apply-migration.mjs  e2e-owner-listing-rental-devnet.mjs  run-next-clean.cjs  seed-partner-demo.mjs  setup-rentproof-devnet.mjs  smoke-moonpay-commerce.mjs  suppress-bigint-buffer-warning.cjs
src/: instrumentation.ts  proxy.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  route.ts
src/components/: AuthProvider.tsx  CardLink.tsx  CrossmintProviderWrapper.tsx  GimiAppShell.tsx  Hero.tsx  ItemCard.tsx  ItemDetail.tsx  ListingAgent.tsx  Marketplace.tsx  Navbar.tsx  PrivyBridge.tsx  PrivyWalletButton.tsx  ReceiptHistory.tsx  (+3 more)
supabase/: config.toml
tests/: cardReceipt.test.ts  env.test.ts  moonpayCommerce.test.ts  ownerActionProof.test.ts  payments.test.ts  privyServerAuth.test.ts  receipts.test.ts  rentalExecutionEvents.test.ts  rentalIntentsRepository.test.ts  rentflow.test.ts  store.test.ts  stripeRedbox.test.ts  validate.test.ts
(+87 files in other folders)
