[package]
name = "rental_session"
version = "0.1.0"
description = "RentProof rental escrow and receipt program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rental_session"

[features]
default = []
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
